--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,6 @@
     "@nestjs/platform-express": "^7.6.18",
     "@nestjs/swagger": "^4.8.2",
     "@nestjs/typeorm": "^7.1.5",
-    "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.1",
     "passport": "^0.4.1",
@@ -45,8 +44,10 @@
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
