feat(web): implement auth system base

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-SERVER_PORT=3000
+SERVER_PORT=4000
 
 DB_HOST=localhost
 DB_PORT=5432
@@ -7,4 +7,6 @@ DB_USERNAME=root
 DB_PASSWORD=password
 
 JWT_SECRET=eb6308f6d7934a8598f5d5ab0b764b0a
-JWT_EXPIRES=30m
+JWT_EXPIRES=10m
+JWT_REFRESH_SECRET=a0b467b0ba5d5f8958a4397d6f8036be
+JWT_REFRESH_EXPIRES=60m
