--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   postgres:
-    container_name: idshare-postgres
+    container_name: postgres
     image: "bitnami/postgresql"
     restart: always
     ports:
